Added interface IRunnable and children interfaces by handler launching from main class

--- a/NetCoreExamples/ConsoleApp1/NetCoreExamples.csproj
+++ b/NetCoreExamples/ConsoleApp1/NetCoreExamples.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Examples\" />
+    <Folder Include="Threading\" />
   </ItemGroup>
 
 </Project>
