--- a/NetCoreExamples/NetCoreExamples.csproj
+++ b/NetCoreExamples/NetCoreExamples.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="JsonFiles\OpenLibraSample.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
